# Transformers

./: .gitignore  README.md  pyproject.toml
data/equilateral_triangles/: centers_train.npy  centers_val.npy  y_train.npy  y_val.npy
notebooks/: attention.ipynb  detecting_equilateral_triangles.ipynb  feed_forward.ipynb  nlp.ipynb  simple_model.ipynb  transformer.ipynb  words_embeddings.ipynb  write_like_shakespeare.ipynb
src/data/: equilateral_triangles.py
src/experiments/equilateral triangles/: goyal_hyperparametes.json  local_hyperparameters.json
src/experiments/equilateral_triangles/: goyal_config_vit.json  goyal_config_vit_gwt.json  training_vit.py  training_vit_gw.py
src/experiments/equilateral_triangles/local_results/: config_1.json  vit_raw_results_1.csv  vit_summary_results_1.csv  vit_training_history_1.csv
src/models/: attention.py  nlp_models.py  utils.py  vision_transformer.py
src/transformers/: attention.py  bigram.py  feed_forward.py  gpt_model.py  nlp_models.py  simple_model.py  transformer.py  utils.py  vision_transformer.py  word_embedding.py
src/transformers/tests/: equilateral_triangles.py
