[project]
name = "Transformers"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Juan Francisco Rodriguez Hernandez", email = "juanfrh7@icloud.com"},
]
dependencies = ["gensim>=4.4.0", "matplotlib>=3.10.8", "numpy>=2.4.1", "ipykernel>=7.1.0", "sklearn>=0.0.post12", "scikit-learn>=1.8.0", "nltk>=3.9.2"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
